manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: "*"
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"ecopaths:staging","namespace":"ohtuprojekti-staging"},"fieldPath":"spec.template.spec.containers[?(@.name==\"ecopaths\")].image","pause":"false"}]
  name: ecopaths-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecopaths
  template:
    metadata:
      labels:
        app: ecopaths
    spec:
      containers:
        - name: ecopaths
          image: ecopaths:staging
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "1500Mi"
              cpu: "1500m"
            requests:
              memory: "128Mi"
              cpu: "50m"
