manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecopaths-svc
spec:
  selector:
    app: ecopaths
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
